--- a/packages/cli/error-overlay/client/src/utils/overlayIndex.html
+++ b/packages/cli/error-overlay/client/src/utils/overlayIndex.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
   </head>
 
-  <body>
+  <body style="width: 100vw; height: 100vh;">
     <div id="root"></div>
-    <script>window.__ima_server_error = <%- JSON.stringify(serverError) %>;</script>
     <script defer="defer" src="/__error-overlay-static/overlay.js"></script>
   </body>
 
