--- a/packages/error-overlay/client/src/utils/overlayIndex.html
+++ b/packages/error-overlay/client/src/utils/overlayIndex.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="/__error-overlay-static/overlay.css">
   </head>
 
-  <body>
+  <body style="width: 100vw; height: 100vh;">
     <div id="root"></div>
-    <script>window.__ima_server_error = <%- JSON.stringify(serverError) %>;</script>
     <script defer="defer" src="/__error-overlay-static/overlay.js"></script>
   </body>
 
