--- a/packages/create-ima-app/examples/hello/public/spa.html
+++ b/packages/create-ima-app/examples/hello/public/spa.html
@@ -39,13 +39,10 @@
     </div>
     <div id="scripts">
         <% if ($Env !== "dev") { %>
-            <!-- <script type="application/javascript" src="/static/js/fetch-polyfill.js?version=<%= $Version %>"></script>
-            <script type="application/javascript" src="/static/js/ima-polyfill.js?version=<%= $Version %>"></script> -->
-            <script type="application/javascript" src="/static/locale/{$Language}.js?version=<%= $Version %>"></script>
+            <script type="application/javascript" src="/static/locale/<%= $Language %>.js?version=<%= $Version %>"></script>
             <script type="application/javascript" src="/static/js/app.bundle.min.js?version=<%= $Version %>"></script>
         <% } else { %>
-            <!-- <script type="application/javascript" src="/static/js/polyfill.js?version=<%= $Version %>"></script> -->
-            <script type="application/javascript" src="/static/locale/{$Language}.js?version=<%= $Version %>"></script>
+            <script type="application/javascript" src="/static/locale/<%= $Language %>.js?version=<%= $Version %>"></script>
             <script type="application/javascript" src="/static/js/vendors.js?version=<%= $Version %>"></script>
             <script type="application/javascript" src="/static/js/app.client.js?version=<%= $Version %>"></script>
         <% } %>
