fix: 🐛 Fixed logger overlapping newlines issues

--- a/packages/hmr-client/src/public/hmrIndicator.html
+++ b/packages/hmr-client/src/public/hmrIndicator.html
@@ -64,7 +64,7 @@
 
   background: white;
 
-  box-shadow: 0 5px 10px -3px rgb(100 116 139 / 40%), 0 3px 4px -4px rgb(100 116 139 / 40%);
+  box-shadow: 0 5px 14px -3px rgba(100, 116, 139, 0.7), 0 3px 4px -4px rgba(100, 116, 139, 0.7);
 
   animation: __ima-hmr-indicator__fade-in-down 0.15s ease-in;
 }
