refactor: 💡 Simplified source map parsing in error overlay

--- a/packages/hmr-client/src/public/overlayIndex.html
+++ b/packages/hmr-client/src/public/overlayIndex.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="___hmrBaseUrl___/__error-overlay-static/overlay.css">
   </head>
 
-  <body style="width: 100vw; height: 100vh;">
+  <body style="width: 100vw; height: 100vh; overflow-x: hidden;">
     <div id="root"></div>
     <script defer="defer" src="___hmrBaseUrl___/__error-overlay-static/overlay.js"></script>
   </body>
