style: 💄 Code style fixes

--- a/packages/devtools/src/public/html/popup.html
+++ b/packages/devtools/src/public/html/popup.html
@@ -11,7 +11,7 @@
 			Enable
 		</span>
 		<label class="switch">
-			<input disabled name="enable-switch" type="checkbox">
+			<input name="enable-switch" type="checkbox">
 			<span class="switcher"></span>
 		</label>
 	</div>
