feat: 🎸 Initial implementation of embedded runtime runner code

--- a/packages/create-ima-app/examples/hello/public/spa.html
+++ b/packages/create-ima-app/examples/hello/public/spa.html
@@ -38,7 +38,7 @@
         </script>
     </div>
     <div id="scripts">
-        <script src="/static/public/imaRunner.js?version=<%= $Version %>"></script>
+        <script src="/static/public/runner.js?version=<%= $Version %>"></script>
     </div>
 </body>
 </html>
