feat: 🎸 Inline runner in SPA.html instead of separate script

--- a/packages/create-ima-app/examples/hello/public/spa.html
+++ b/packages/create-ima-app/examples/hello/public/spa.html
@@ -35,10 +35,8 @@
             window.$IMA.$Path = location.pathname;
             window.$IMA.$Root = "";
             window.$IMA.$LanguagePartPath = "";
+            <%- runner %>
         </script>
-    </div>
-    <div id="scripts">
-        <script src="/static/public/runner.js?version=<%= $Version %>"></script>
     </div>
 </body>
 </html>
