refactor: 💡 Refactored $Source to function generator

--- a/packages/create-ima-app/examples/hello/public/spa.html
+++ b/packages/create-ima-app/examples/hello/public/spa.html
@@ -14,7 +14,8 @@
     <meta property="og:image" content="" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/static/css/app.css?version=<%= $Version %>" />
+    <%- styles %>
+
     <title></title>
 </head>
 <body>
